refactor(api): convert records and sealed types to plain classes